--- a/political_text_slides.html
+++ b/political_text_slides.html
@@ -3,7 +3,7 @@
   <head>
     <title>Political Text Analysis with Embedding Regression</title>
     <meta charset="utf-8" />
-    <meta name="author" content=".tiny[Yen-Chieh Liao†, Winnie Xia‡, Chen Zeng§ and Slava Jankin†]" />
+    <meta name="author" content="Yen-Chieh Liao†, Winnie Xia‡, Chen Zeng§ and Slava Jankin†" />
     <meta name="author" content=".tiny[†University of Birmingham, ‡Aarhus University, and §Kings’ College London]" />
     <meta name="author" content=".tiny[2025 APSA]" />
     <script src="libs/header-attrs-2.29/header-attrs.js"></script>
@@ -23,7 +23,7 @@ class: center, middle, inverse, title-slide
 ## .smallest.hi-slate[From Multilingual to Cross-lingual Application]
 ]
 .author[
-### .tiny[Yen-Chieh Liao<sup>†</sup>, Winnie Xia<sup>‡</sup>, Chen Zeng<sup>§</sup> and Slava Jankin<sup>†</sup>]
+### Yen-Chieh Liao<sup>†</sup>, Winnie Xia<sup>‡</sup>, Chen Zeng<sup>§</sup> and Slava Jankin<sup>†</sup>
 ]
 .author[
 ### .tiny[<sup>†</sup>University of Birmingham, <sup>‡</sup>Aarhus University, and <sup>§</sup>Kings’ College London]
