--- a/electoral_reform_slides.html
+++ b/electoral_reform_slides.html
@@ -42,9 +42,6 @@ exclude: true
 
 
 
-
-
-
 ---
 layout: true
 # .tiny[Overview]
@@ -242,15 +239,23 @@ name:why-pq
 &lt;img src="./images/val-set.png" width="95%" style="display: block; margin: auto;" /&gt;
 ]
 
---
-
 .pull-right[
-
-&lt;img src="./images/val-set-2.png" width="95%" style="display: block; margin: auto;" /&gt;
+&lt;img src="./images/val-setb.png" width="95%" style="display: block; margin: auto;" /&gt;
 ]
 
 
+---
 
+&lt;br&gt;&lt;br&gt;
+
+
+.pull-left[
+&lt;img src="./images/val-set2.png" width="95%" style="display: block; margin: auto;" /&gt;
+]
+
+.pull-right[
+&lt;img src="./images/val-setb2.png" width="95%" style="display: block; margin: auto;" /&gt;
+]
 
 
 ---
