--- a/electoral_reform_slides.html
+++ b/electoral_reform_slides.html
@@ -392,9 +392,9 @@ name:research-design
 - `$$\small{\text{GTQs}_{i,t} = \alpha_{0} + \alpha_{1}\text{Post-reform}_{t} + \\ \sum_{d=1}^{5}\alpha_{4}^d(\text{Post-reform}_{t} \times \text{Conditions}^{d}_{t}) +\\ \text{Controls}}$$`
 
 - .small[**5 Municipal Indicators**:]
-  - .small[.blue[Unemployment rate, Agricultural value]]
-  - .small[.blue[Sector employment (Agri/Manu/Service)]]
-  - .small[.blue[Higher education population share]]
+  - .small[.blue[__Unemployment rate, Agricultural value__]]
+  - .small[.blue[__Sector employment (Agri/Manu/Service)__]]
+  - .small[.blue[__Higher education population share__]]
 ]
 
 
@@ -408,12 +408,13 @@ layout: true
 ---
 &lt;div style="margin-top: -20px;"&gt;
 
+&lt;br&gt;&lt;br&gt;
 
 
 .pull-left[
 &lt;div style="margin-top: 80px;"&gt;
 
-&lt;img src="./images/result1.png" width="95%" style="display: block; margin: auto;" /&gt;
+&lt;img src="./images/result1.png" width="90%" style="display: block; margin: auto;" /&gt;
 &lt;/div&gt;
 
 ]
@@ -421,16 +422,65 @@ layout: true
 .pull-right[
 **SNTV System (Pre-2008)**
 - .small[Legislators differentiate via distributive activities]
-- .small[Higher proportion of GTQs]
-- .small[Legislators differentiate via distributive activities]
+- .small[Higher GTQs]
 
 **MMM System (Post-2008)**
-- .small[Lower GTQ submissions initially]
-- .small[Single-member districts → Interparty competition]
-- .small[Party labels become more important]
-- .small[Effect diminishes over time (learning effect)]
+- .small[Lower GTQ initially]
+- .small[SMD → Interparty competition]
+- .small[Party labels ↑]
+- .small[Effect diminishes over time]
 ]
 
+---
+
+&lt;br&gt;&lt;br&gt;
+
+
+.pull-left[
+&lt;div style="margin-top: 80px;"&gt;
+
+&lt;img src="./images/result1.png" width="90%" style="display: block; margin: auto;" /&gt;
+&lt;/div&gt;
+
+]
+
+.pull-right[
+**SNTV System (Pre-2008)**
+- .small[.blue[__Legislators differentiate via distributive activities__]]
+- .small[.blue[__Higher GTQs__]]
+
+**MMM System (Post-2008)**
+- .small[Lower GTQ initially]
+- .small[SMD → Interparty competition]
+- .small[Party labels ↑]
+- .small[Effect diminishes over time]
+]
+
+
+---
+
+&lt;br&gt;&lt;br&gt;
+
+
+.pull-left[
+&lt;div style="margin-top: 80px;"&gt;
+
+&lt;img src="./images/result1.png" width="90%" style="display: block; margin: auto;" /&gt;
+&lt;/div&gt;
+
+]
+
+.pull-right[
+**SNTV System (Pre-2008)**
+- .small[.blue[__Legislators differentiate via distributive activities__]]
+- .small[.blue[__Higher GTQs__]]
+
+**MMM System (Post-2008)**
+- .small[.blue[__Lower GTQ initially__]]
+- .small[.blue[__SMD → Interparty competition__]]
+- .small[.blue[__Party labels ↑__]]
+- .small[.blue[__Effect diminishes over time__]]
+]
 
 
 ---
@@ -438,6 +488,7 @@ layout: true
 # .tiny[Main Findings: The Impacts of Socioeconomic Context (2/2)]
 ---
 &lt;div style="margin-top: -20px;"&gt;
+
 
 .pull-left[
 &lt;div style="margin-top: 80px;"&gt;
@@ -457,6 +508,48 @@ layout: true
 - .small[Single-member structure reduces contextual responsiveness]
 ]
 
+---
+
+
+.pull-left[
+&lt;div style="margin-top: 80px;"&gt;
+&lt;img src="./images/result2.png" width="95%" style="display: block; margin: auto;" /&gt;
+&lt;/div&gt;
+]
+
+.pull-right[
+**Under SNTV**
+- .small[**High unemployment**: .blue[__Fewer distributive policies__]]
+- .small[**Economic stability**: .blue[__More GTQs for reputation__]]
+- .small[**Lower education**: .blue[__Traditional patron-client relations__]]
+- .small[**Higher education**: .blue[__Less distributive engagement__]]
+
+**Under MMM**
+- .small[Both socioeconomic effects substantially neutralized]
+- .small[Single-member structure reduces contextual responsiveness]
+]
+
+
+
+---
+
+.pull-left[
+&lt;div style="margin-top: 80px;"&gt;
+&lt;img src="./images/result2.png" width="95%" style="display: block; margin: auto;" /&gt;
+&lt;/div&gt;
+]
+
+.pull-right[
+**Under SNTV**
+- .small[**High unemployment**: .blue[__Fewer distributive policies__]]
+- .small[**Economic stability**: .blue[__More GTQs for reputation__]]
+- .small[**Lower education**: .blue[__Traditional patron-client relations__]]
+- .small[**Higher education**: .blue[__Less distributive engagement__]]
+
+**Under MMM**
+- .small[.blue[__Both socioeconomic effects substantially neutralized__]]
+- .small[.blue[__Single-member structure reduces contextual responsiveness__]]
+]
 ---
 layout: true
 # .tiny[Takeaway]
