--- a/electoral_reform_slides.html
+++ b/electoral_reform_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="" xml:lang="">
   <head>
-    <title>Electoral Reform and Geographically-Targeted Oversight:</title>
+    <title>Electoral Systems and Geographically-Targeted Oversight:</title>
     <meta charset="utf-8" />
     <meta name="author" content="Yen-Chieh Liao and Li Tang" />
     <meta name="author" content=".tiny[University of Birmingham and University of Reading]" />
@@ -17,7 +17,7 @@
 class: center, middle, inverse, title-slide
 
 .title[
-# Electoral Reform and Geographically-Targeted Oversight:
+# Electoral Systems and Geographically-Targeted Oversight:
 ]
 .subtitle[
 ## .smallest.hi-slate[Evidence from Taiwan Legislative Yuan]
@@ -32,7 +32,7 @@ class: center, middle, inverse, title-slide
 ### .tiny[2025 APSA]
 ]
 .date[
-### .tiny[11 September 2025]
+### .tiny[12 September 2025]
 ]
 
 ---
@@ -58,7 +58,9 @@ name:overview
 --
 
 - .small.hi-grey[**Data:**] &lt;br&gt;
-  + .small[63,748 parliamentary questions from 402 district legislators (two decades)]
+  + .small[63,748 parliamentary questions from 402 district legislators (two decades)]&lt;br&gt;
+
+--
   + .small[Focus on geographically targeted questions (GTQs) — _content that addresses constituency-specific geographical interests and demands_]
   
 --
@@ -127,6 +129,8 @@ __Does SNTV → SMD Reduce Particularistm?__
 
 .small.hi-grey[**The Literature:**] 
   - SNTV's intraparty competition encourages  →  personal reputation  →  particularistic appeals&lt;br&gt;
+--
+
   - SMD's interparty competition promotes programmatic appeals to broader coalition .small[(e.g., Cain 1987; Carey 1995; Cox 1997; Duverger 1954; Catalinac 2016)]
 
 --
@@ -140,6 +144,7 @@ __Does SNTV → SMD Reduce Particularistm?__
 --
 
 &gt; **Hypothesis 1.** Due to the elimination of intraparty competition and the necessity to appeal to broader constituencies, legislators elected under MMM are less likely to submit GTQs compared to those elected under the SNTV system.
+
 
 ---
 layout: true
@@ -212,8 +217,60 @@ name:why-pq
 
 .pull-right[
 
-&lt;img src="./images/train-split.png" width="95%" style="display: block; margin: auto;" /&gt;
+&lt;img src="./images/train-split.png" width="100%" style="display: block; margin: auto;" /&gt;
 ]
+
+
+---
+
+&lt;br&gt;&lt;br&gt;
+
+
+
+&lt;img src="./images/train-split.png" width="95%" style="display: block; margin: auto;" /&gt;
+
+
+---
+
+&lt;br&gt;&lt;br&gt;
+
+
+
+&lt;img src="./images/train-split-1.png" width="95%" style="display: block; margin: auto;" /&gt;
+
+
+---
+
+&lt;br&gt;&lt;br&gt;
+
+
+
+&lt;img src="./images/train-split-2.png" width="95%" style="display: block; margin: auto;" /&gt;
+
+---
+
+&lt;br&gt;&lt;br&gt;
+
+
+
+&lt;img src="./images/train-split-3.png" width="95%" style="display: block; margin: auto;" /&gt;
+
+---
+
+&lt;div style="margin-top: -20px;"&gt;
+
+
+.pull-left[
+&lt;img src="./images/train-data.png" width="95%" style="display: block; margin: auto;" /&gt;
+]
+
+.pull-right[
+
+&lt;img src="./images/train-split.png" width="100%" style="display: block; margin: auto;" /&gt;
+]
+
+
+&lt;div style="margin-top: -20px;"&gt;
 
 --
 
@@ -224,10 +281,8 @@ name:why-pq
 
 --
 .pull-right[
-
-&lt;img src="./images/pq-eg.png" width="99%" style="display: block; margin: auto;" /&gt;
+&lt;img src="./images/PQ.png" width="90%" style="display: block; margin: auto;" /&gt;
 ]
-
 
 ---
 layout: true
@@ -268,10 +323,22 @@ layout: true
 ---
 name:data
 
-&lt;img src="./images/keyness.png" width="82%" style="display: block; margin: auto;" /&gt;
+&lt;img src="./images/keyness.png" width="90%" style="display: block; margin: auto;" /&gt;
 
 
 
+
+---
+
+&lt;img src="./images/keyness-2.png" width="90%" style="display: block; margin: auto;" /&gt;
+
+---
+
+&lt;img src="./images/keyness-3.png" width="90%" style="display: block; margin: auto;" /&gt;
+
+---
+
+&lt;img src="./images/keyness-4.png" width="90%" style="display: block; margin: auto;" /&gt;
 
 
 
