--- a/electoral_reform_slides.html
+++ b/electoral_reform_slides.html
@@ -236,6 +236,14 @@ name:why-pq
 
 
 
+&lt;img src="./images/train-split-3.png" width="95%" style="display: block; margin: auto;" /&gt;
+
+---
+
+&lt;br&gt;&lt;br&gt;
+
+
+
 &lt;img src="./images/train-split-1.png" width="95%" style="display: block; margin: auto;" /&gt;
 
 
@@ -247,13 +255,7 @@ name:why-pq
 
 &lt;img src="./images/train-split-2.png" width="95%" style="display: block; margin: auto;" /&gt;
 
----
 
-&lt;br&gt;&lt;br&gt;
-
-
-
-&lt;img src="./images/train-split-3.png" width="95%" style="display: block; margin: auto;" /&gt;
 
 ---
 
@@ -283,6 +285,53 @@ name:why-pq
 .pull-right[
 &lt;img src="./images/PQ.png" width="90%" style="display: block; margin: auto;" /&gt;
 ]
+
+
+
+---
+
+&lt;br&gt;
+
+
+
+&lt;img src="./images/performance.png" width="95%" style="display: block; margin: auto;" /&gt;
+
+
+
+---
+
+&lt;br&gt;
+
+
+
+&lt;img src="./images/performance1.png" width="95%" style="display: block; margin: auto;" /&gt;
+
+
+---
+
+&lt;br&gt;
+
+
+
+&lt;img src="./images/performance2.png" width="95%" style="display: block; margin: auto;" /&gt;
+
+
+---
+
+&lt;br&gt;
+
+
+
+&lt;img src="./images/performance3.png" width="95%" style="display: block; margin: auto;" /&gt;
+
+---
+
+&lt;br&gt;
+
+
+
+&lt;img src="./images/performance4.png" width="95%" style="display: block; margin: auto;" /&gt;
+
 
 ---
 layout: true
