--- a/electoral_reform_slides.html
+++ b/electoral_reform_slides.html
@@ -281,11 +281,6 @@ name:why-pq
 &lt;img src="./images/performance.png" width="99%" style="display: block; margin: auto;" /&gt;
 ]
 
---
-.pull-right[
-&lt;img src="./images/PQ.png" width="90%" style="display: block; margin: auto;" /&gt;
-]
-
 
 
 ---
@@ -331,6 +326,36 @@ name:why-pq
 
 
 &lt;img src="./images/performance4.png" width="95%" style="display: block; margin: auto;" /&gt;
+
+---
+
+&lt;div style="margin-top: -20px;"&gt;
+
+
+.pull-left[
+&lt;img src="./images/train-data.png" width="95%" style="display: block; margin: auto;" /&gt;
+]
+
+.pull-right[
+
+&lt;img src="./images/train-split.png" width="100%" style="display: block; margin: auto;" /&gt;
+]
+
+
+&lt;div style="margin-top: -20px;"&gt;
+
+
+.pull-left[
+
+&lt;img src="./images/performance.png" width="99%" style="display: block; margin: auto;" /&gt;
+]
+
+--
+.pull-right[
+&lt;img src="./images/PQ.png" width="90%" style="display: block; margin: auto;" /&gt;
+]
+
+
 
 
 ---
@@ -467,7 +492,7 @@ name:research-design
 - `$$\small{\text{GTQs}_{i,t} = \alpha_{0} + \alpha_{1}\text{Post-reform}_{t} + \\ \sum_{d=1}^{5}\alpha_{4}^d(\text{Post-reform}_{t} \times \text{Conditions}^{d}_{t}) +\\ \text{Controls}}$$`
 
 - .small[**5 Municipal Indicators**:]
-  - .small[Unemployment rate, Agricultural value]
+  - .small[Unemployment rate]
   - .small[Sector employment (Agri/Manu/Service)]
   - .small[Higher education population share]
 ]
@@ -536,36 +561,12 @@ layout: true
 ]
 
 .pull-right[
-**SNTV System (Pre-2008)**
+**SNTV (Pre-2008)**
 - .small[Legislators differentiate via distributive activities]
 - .small[Higher GTQs]
 
-**MMM System (Post-2008)**
-- .small[Lower GTQ initially]
-- .small[SMD → Interparty competition]
-- .small[Party labels ↑]
-- .small[Effect diminishes over time]
-]
 
----
-
-&lt;br&gt;&lt;br&gt;
-
-
-.pull-left[
-&lt;div style="margin-top: 80px;"&gt;
-
-&lt;img src="./images/result1.png" width="90%" style="display: block; margin: auto;" /&gt;
-&lt;/div&gt;
-
-]
-
-.pull-right[
-**SNTV System (Pre-2008)**
-- .small[.blue[__Legislators differentiate via distributive activities__]]
-- .small[.blue[__Higher GTQs__]]
-
-**MMM System (Post-2008)**
+**SMD  (Post-2008)**
 - .small[Lower GTQ initially]
 - .small[SMD → Interparty competition]
 - .small[Party labels ↑]
@@ -587,16 +588,18 @@ layout: true
 ]
 
 .pull-right[
-**SNTV System (Pre-2008)**
-- .small[.blue[__Legislators differentiate via distributive activities__]]
-- .small[.blue[__Higher GTQs__]]
+**SNTV (Pre-2008)**
+- .small[Legislators differentiate via distributive activities]
+- .small[Higher GTQs]
 
-**MMM System (Post-2008)**
-- .small[.blue[__Lower GTQ initially__]]
-- .small[.blue[__SMD → Interparty competition__]]
-- .small[.blue[__Party labels ↑__]]
-- .small[.blue[__Effect diminishes over time__]]
+
+**SMD  (Post-2008)**
+- .small[Lower GTQ initially]
+- .small[SMD → Interparty competition]
+- .small[Party labels ↑]
+- .small.blue[__Effect diminishes over time__]
 ]
+
 
 
 ---
@@ -619,7 +622,7 @@ layout: true
 - .small[**Lower education**: Traditional patron-client relations]
 - .small[**Higher education**: Less distributive engagement]
 
-**Under MMM**
+**Under SMD**
 - .small[Both socioeconomic effects substantially neutralized]
 - .small[Single-member structure reduces contextual responsiveness]
 ]
