--- a/electoral_reform_slides.html
+++ b/electoral_reform_slides.html
@@ -643,7 +643,7 @@ layout: true
 - .small[**Lower education**: .blue[__Traditional patron-client relations__]]
 - .small[**Higher education**: .blue[__Less distributive engagement__]]
 
-**Under MMM**
+**Under SMD**
 - .small[Both socioeconomic effects substantially neutralized]
 - .small[Single-member structure reduces contextual responsiveness]
 ]
@@ -669,35 +669,35 @@ layout: true
 - .small[.blue[__Both socioeconomic effects substantially neutralized__]]
 - .small[.blue[__Single-member structure reduces contextual responsiveness__]]
 ]
+
 ---
 layout: true
 # .tiny[Takeaway]
 ---
-&lt;div style="margin-top: -20px;"&gt;
 
-.pull-left[
-**Reform Goals: SNTV → SMD**&lt;br&gt; 
+&lt;br&gt;&lt;br&gt;
+
+
+**Reform Goals: SNTV → SMD**&lt;br&gt;
 - .small[Reduce money politics and factionalism]&lt;br&gt; 
 - .small[Improve legislative efficiency]
 
+--
+
+
 **Actual Effects: SMD Impact**&lt;br&gt; 
-- .small[Socioeconomic targeting effects substantially neutralized]&lt;br&gt; 
-- .small[SMD structure reduces contextual responsiveness]
+- .small[Socioeconomic effects substantially neutralized]&lt;br&gt; 
+- .small[SMD reduces responsiveness]
+
+--
+
 
 **Academic Debate → Reality**&lt;br&gt; 
 - .small[Wu (2002): SNTV was unfairly scapegoated for broader political problems]&lt;br&gt; 
 - .small[We: SMD reduces particularistic responsiveness]&lt;br&gt; 
 
-]
 
---
 
-.pull-right[
-**Implication** &lt;br&gt; 
-- .small[Taiwan's demographic complexity (Hoklo, Hakka, Mainlanders, indigenous, new immigrants) makes SNTV's multi-member structure particularly valuable for minority representation compared to SMD]&lt;br&gt; 
-- .small[Efficiency vs. representational inclusiveness]&lt;br&gt; 
-- .small[Need to balance system goals with minority needs]
-]
 
 ---
 layout: true
