--- a/electoral_reform_slides.html
+++ b/electoral_reform_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="" xml:lang="">
   <head>
-    <title>Electoral Systems and Geographically-Targeted Oversight:</title>
+    <title>.hi-green[Electoral Systems and Geographically-Targeted Oversight:]</title>
     <meta charset="utf-8" />
     <meta name="author" content="Yen-Chieh Liao and Li Tang" />
     <meta name="author" content=".tiny[University of Birmingham and University of Reading]" />
@@ -17,13 +17,13 @@
 class: center, middle, inverse, title-slide
 
 .title[
-# Electoral Systems and Geographically-Targeted Oversight:
+# .hi-green[Electoral Systems and Geographically-Targeted Oversight:]
 ]
 .subtitle[
 ## .smallest.hi-slate[Evidence from Taiwan Legislative Yuan]
 ]
 .author[
-### Yen-Chieh Liao and Li Tang
+### <strong>Yen-Chieh Liao and Li Tang</strong>
 ]
 .author[
 ### .tiny[University of Birmingham and University of Reading]
@@ -61,7 +61,7 @@ name:overview
   + .small[63,748 parliamentary questions from 402 district legislators (two decades)]&lt;br&gt;
 
 --
-  + .small[Focus on geographically targeted questions (GTQs) — _content that addresses constituency-specific geographical interests and demands_]
+  + .small[Focus on geographically targeted questions (GTQs) — .blue[__content that addresses constituency-specific geographical interests and demands__]]
   
 --
 
@@ -84,11 +84,13 @@ __What We Know:__
 
 --
 
-- .small.hi-grey[Established:] Different candidate-centered systems create varying incentives for personal reputation (e.g., Shugart and Wattenberg, 2001; Shugart, 2005; Grofman et al., 1999).&lt;br&gt;
+- .small.hi-grey[Established:] &lt;br&gt;
+Different candidate-centered systems (SNTV v.s. SMD) create varying incentives for personal reputation (e.g., Shugart and Wattenberg, 2001; Shugart, 2005; Grofman et al., 1999).&lt;br&gt;
 
 --
 
-- .small.hi-grey[Evidence:] Studies on manifestos (e.g., Catalinac, 2016a,b; Crisp et al., 202), legislative voting (e.g., Liao, 2024), political deliberation (e.g., Motolinia, 2021; Høyland and Søyland, 2019) and legislation (e.g., Decadri et al., 2022).
+- .small.hi-grey[Electoral System Literature:] 
+Studies on manifestos (e.g., Catalinac, 2016a,b; Crisp et al., 202), legislative voting (e.g., Liao, 2024), political deliberation (e.g., Motolinia, 2021; Høyland and Søyland, 2019) and legislation (e.g., Decadri et al., 2022).
 
 --
 
@@ -158,9 +160,11 @@ __Do Geographic Conditions Moderate Electoral System Effects?__
 
 --
 
-- .small.hi-grey[Local Socioeconomic Conditions:] Economic challenges/homogeneity may override institutional incentives
+- .small.hi-grey[Local Socioeconomic Conditions:]&lt;br&gt; 
+Economic challenges/homogeneity may override institutional incentives
 
-- .small.hi-grey[Evidence:] Unemployment, manufacturing concentration affect legislative behavior .small[(Rickard 2012; Cayton 2022; Harden 2013)]
+- .small.hi-grey[Evidence:] &lt;br&gt;
+Unemployment, manufacturing concentration affect legislative behavior .small[(Rickard 2012; Cayton 2022; Harden 2013)]
 
 
 --
@@ -617,10 +621,10 @@ layout: true
 
 .pull-right[
 **Under SNTV**
-- .small[**High unemployment**: Fewer distributive policies]
-- .small[**Economic stability**: More GTQs for reputation]
-- .small[**Lower education**: Traditional patron-client relations]
-- .small[**Higher education**: Less distributive engagement]
+- .small[High unemployment: Fewer distributive policies]
+- .small[Economic stability: More GTQs for reputation]
+- .small[Lower education: Traditional patron-client relations]
+- .small[Higher education: Less distributive engagement]
 
 **Under SMD**
 - .small[Both socioeconomic effects substantially neutralized]
@@ -638,10 +642,10 @@ layout: true
 
 .pull-right[
 **Under SNTV**
-- .small[**High unemployment**: .blue[__Fewer distributive policies__]]
-- .small[**Economic stability**: .blue[__More GTQs for reputation__]]
-- .small[**Lower education**: .blue[__Traditional patron-client relations__]]
-- .small[**Higher education**: .blue[__Less distributive engagement__]]
+- .small[.blue[**High unemployment**]: Fewer distributive policies]
+- .small[.blue[**Economic stability**]: More GTQs for reputation]
+- .small[.blue[**Lower education**]:  Traditional patron-client relations]
+- .small[.blue[**Higher education**]: Less distributive engagement]
 
 **Under SMD**
 - .small[Both socioeconomic effects substantially neutralized]
@@ -660,14 +664,14 @@ layout: true
 
 .pull-right[
 **Under SNTV**
-- .small[**High unemployment**: .blue[__Fewer distributive policies__]]
-- .small[**Economic stability**: .blue[__More GTQs for reputation__]]
-- .small[**Lower education**: .blue[__Traditional patron-client relations__]]
-- .small[**Higher education**: .blue[__Less distributive engagement__]]
+- .small[.blue[**High unemployment**]: Fewer distributive policies]
+- .small[.blue[**Economic stability**]: More GTQs for reputation]
+- .small[.blue[**Lower education**]:  Traditional patron-client relations]
+- .small[.blue[**Higher education**]: Less distributive engagement]
 
-**Under MMM**
-- .small[.blue[__Both socioeconomic effects substantially neutralized__]]
-- .small[.blue[__Single-member structure reduces contextual responsiveness__]]
+**Under SMD**
+- .small[Both socioeconomic effects substantially .blue[**neutralized**]]
+- .small[Single-member structure .blue[**reduces**] contextual responsiveness]
 ]
 
 ---
@@ -678,7 +682,7 @@ layout: true
 &lt;br&gt;&lt;br&gt;
 
 
-**Reform Goals: SNTV → SMD**&lt;br&gt;
+**Reform Goals (KMT + DPP): SNTV → SMD**&lt;br&gt;
 - .small[Reduce money politics and factionalism]&lt;br&gt; 
 - .small[Improve legislative efficiency]
 
