--- a/electoral_reform_slides.html
+++ b/electoral_reform_slides.html
@@ -145,7 +145,7 @@ __Does SNTV → SMD Reduce Particularistm?__
 
 --
 
-&gt; **Hypothesis 1.** Due to the elimination of intraparty competition and the necessity to appeal to broader constituencies, legislators elected under MMM are less likely to submit GTQs compared to those elected under the SNTV system.
+&gt; **Hypothesis 1.** Due to the elimination of intraparty competition and the necessity to appeal to broader constituencies, __legislators elected under MMM are less likely to submit GTQs compared to those elected under the SNTV system.__
 
 
 ---
@@ -173,7 +173,7 @@ Unemployment, manufacturing concentration affect legislative behavior .small[(Ri
 &amp;nbsp;&amp;nbsp;
 
 
-&gt; **Hypothesis 2.** While MMM reduces GTQs compared to SNTV, this effect is moderated by local socioeconomic characteristics.
+&gt; **Hypothesis 2.** While MMM reduces GTQs compared to SNTV, __this effect is moderated by local socioeconomic characteristics__.
 
 
 ---
