--- a/cgot2025.html
+++ b/cgot2025.html
@@ -191,7 +191,7 @@ name: overview
 
 &lt;br&gt;&lt;br&gt;
 
-.small[Future Work: Apply your theory to more empirical analysis]
+.small[__Future Work__: Apply your theory to more empirical analyses]
 
 .pull-left[
 
