--- a/cgot2025.html
+++ b/cgot2025.html
@@ -4,8 +4,8 @@
     <title>Discussion Note: Wang &amp; Sun</title>
     <meta charset="utf-8" />
     <meta name="author" content="Yen-Chieh Liao" />
-    <meta name="author" content=".tiny[The Centre for Artificial Intelligence in Government, University of Birmingham]" />
-    <meta name="author" content=".tiny[2025 APSA CGOT]" />
+    <meta name="author" content="CAIG | University of Birmingham" />
+    <meta name="author" content="2025 APSA CGOT" />
     <script src="libs/header-attrs-2.29/header-attrs.js"></script>
     <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link href="libs/remark-css-0.0.1/metropolis.css" rel="stylesheet" />
@@ -23,13 +23,10 @@ class: center, middle, inverse, title-slide
 ### <strong>Yen-Chieh Liao</strong>
 ]
 .author[
-### .tiny[The Centre for Artificial Intelligence in Government, University of Birmingham]
+### CAIG | University of Birmingham
 ]
 .author[
-### .tiny[2025 APSA CGOT]
-]
-.date[
-### .tiny[13 September 2025]
+### 2025 APSA CGOT
 ]
 
 ---
@@ -189,7 +186,7 @@ name: overview
 
 ---
 
-&lt;br&gt;&lt;br&gt;
+&lt;br&gt;
 
 .small[__Future Work__: Apply your theory to more empirical analyses]
 
